images added and updated

--- a/index.html
+++ b/index.html
@@ -665,13 +665,10 @@
 							<b>ALL</b>
 						</a>
 						<a href="#" data-filter=".web-design">
-							<b>WEB DESIGN</b>
+							<b>ME</b>
 						</a>
 						<a href="#" data-filter=".branding">
-							<b>BRANDING</b>
-						</a>
-						<a href="#" data-filter=".graphic-design">
-							<b>GRAPHIC DESIGN</b>
+							<b>SCREEN</b>
 						</a>
 					</div>
 					<!-- portfolioFilter -->
@@ -683,57 +680,51 @@
 			<div class="portfolioContainer  margin-b-50">
 
 				<div class="p-item web-design">
-					<a href="images/portfolio-13-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-13-400x400.jpg" alt="">
+					<a href="images/me-1.JPG" data-fluidbox>
+						<img src="images/me-1.JPG" alt="">
 					</a>
 				</div>
-				<!-- p-item -->
-
-				<div class="p-item branding graphic-design">
-					<a href="images/portfolio-14-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-14-400x400.jpg" alt="">
-					</a>
-				</div>
-				<!-- p-item -->
 
 				<div class="p-item web-design">
-					<a href="images/portfolio-15-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-15-400x400.jpg" alt="">
+					<a href="images/me-2.JPG" data-fluidbox>
+						<img src="images/me-2.JPG" alt="">
 					</a>
 				</div>
-				<!-- p-item -->
 
-				<div class="p-item graphic-design">
-					<a class="img" href="images/portfolio-16-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-16-400x400.jpg" alt="">
+				<div class="p-item web-design">
+					<a href="images/me-3.JPG" data-fluidbox>
+						<img src="images/me-3.JPG" alt="">
 					</a>
 				</div>
-				<!-- p-item -->
 
-				<div class="p-item branding graphic-design">
-					<a href="images/portfolio-17-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-17-400x400.jpg" alt="">
+				<div class="p-item web-design">
+					<a href="images/me-4.JPG" data-fluidbox>
+						<img src="images/me-4.JPG" alt="">
 					</a>
 				</div>
-				<!-- p-item -->
 
-				<div class="p-item graphic-design web-design">
-					<a href="images/portfolio-18-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-18-400x400.jpg" alt="">
+				<!-- p-item -->
+				<div class="p-item web-design branding">
+					<a href="images/pro-1.png" data-fluidbox>
+						<img src="images/pro-1.png" alt="">
 					</a>
 				</div>
-				<!-- p-item -->
-
-				<div class="p-item  graphic-design branding">
-					<a href="images/portfolio-19-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-19-400x400.jpg" alt="">
-					</a>
-				</div>
-				<!-- p-item -->
 
 				<div class="p-item web-design branding">
-					<a href="images/portfolio-20-400x400.jpg" data-fluidbox>
-						<img src="images/portfolio-20-400x400.jpg" alt="">
+					<a href="images/pro-2.png" data-fluidbox>
+						<img src="images/pro-2.png" alt="">
+					</a>
+				</div>
+
+				<div class="p-item web-design branding">
+					<a href="images/pro-3.png" data-fluidbox>
+						<img src="images/pro-3.png" alt="">
+					</a>
+				</div>
+
+				<div class="p-item web-design branding">
+					<a href="images/pro-4.png" data-fluidbox>
+						<img src="images/pro-4.png" alt="">
 					</a>
 				</div>
 				<!-- p-item -->
