--- a/index.html
+++ b/index.html
@@ -704,19 +704,19 @@
 				</div>
 
 				<!-- p-item -->
-				<div class="p-item web-design branding">
+				<div class="p-item branding">
 					<a href="images/pro-1.png" data-fluidbox>
 						<img src="images/pro-1.png" alt="">
 					</a>
 				</div>
 
-				<div class="p-item web-design branding">
+				<div class="p-item branding">
 					<a href="images/pro-2.png" data-fluidbox>
 						<img src="images/pro-2.png" alt="">
 					</a>
 				</div>
 
-				<div class="p-item web-design branding">
+				<div class="p-item branding">
 					<a href="images/pro-3.png" data-fluidbox>
 						<img src="images/pro-3.png" alt="">
 					</a>
