--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="img/curriculum.png">
 
 
 	<!-- Font -->
