Mobile Num Fixed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
-								<h5>01915-770274</h5>
+								<h5>+880 1915-770274</h5>
 								<h6>SAT - FRI,9AM - 10PM</h6>
 							</div>
 							<!-- right-area -->
@@ -102,9 +102,9 @@
 							<li>
 								<b class="font-yellow">EMAIL</b> : jaggesher14@gmail.com</li>
 							<li>
-								<b class="font-yellow">PHONE</b> : 01915-770274</li>
+								<b class="font-yellow">PHONE</b> : +880 1915-770274</li>
 							<li>
-								<b class="font-yellow">Graduated From</b> : University of Rajshahi</li>
+								<b class="font-yellow">Graduated From</b> : University of Rajshahi,Bangladesh</li>
 						</ul>
 						<ul class="social-icons">
 							<li>
@@ -298,7 +298,7 @@
 							<li>Application for managing confidential data of RAB in Bangladesh</li>
 							<li>Design and Develop the project as a parts of the team</li>
 							<li>Currently, live on RAB's  backbone serve, and used by all units of RAB in Bangladesh</li>
-							<li>Key Technologies <b>Laravel</b>, <b>MySqli</b>, <b>Bootstrap3</b>, <b>Ajax</b> etc. </li>
+							<li class="technology"> <strong class="font-yellow">Key Technologies: </strong> <b>Laravel</b>, <b>MySqli</b>, <b>Bootstrap3</b>, <b>Ajax</b> etc. </li>
 						</ul>
 					</div>
 					<!-- experience -->
@@ -335,7 +335,7 @@
 									<b>BSc(Eng.) In Computer Science & Eng.</b>
 								</h4>
 								<h5 class="font-yellow">
-									<b>University Of Rajshahi</b>
+									<b>University Of Rajshahi | Bangladesh</b>
 								</h5>
 								<h6 class="font-lite-black margin-t-10">GRADUATED IN JUL 2018(4 YEARS)</h6>
 								<p class="margin-tb-30">
