--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<!-- col-sm-8 -->
 
 					<div class="col-sm-10 col-md-3 col-lg-3">
-						<a class="downlad-btn" href="#">Download CV</a>
+						<a download class="downlad-btn" href="/cv/JaggesherMondal.pdf">Download CV</a>
 					</div>
 					<!-- col-lg-2 -->
 
