--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 									<li><b>SQL Server</b></li>
 									<li><b>MySql</b></li>
 									<li>Ajax</li>
+									<li><b>SignalR</b></li>
 									<li>Bootstrap</li>
-									<li>Angular Material</li>
 								</ul>
 							</div>
 						</div>
@@ -339,7 +339,7 @@
 								</h5>
 								<h6 class="font-lite-black margin-t-10">GRADUATED IN JUL 2018(4 YEARS)</h6>
 								<p class="margin-tb-30">
-									<p><Strong>CGPA</Strong> Not Published Yet</p>
+									<p><Strong>CGPA</Strong> Not Published Yet(3.44 after 3rd Year)</p>
 								</p>
 							</div>
 							<!-- education -->
