updated texts which were considered as incorrect sentence

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
 								<h5>jaggesher14@gmail.com</h5>
-								<h6>REPLY IN 24 HOURS</h6>
+								<h6>REPLIES WITHIN 24 HOURS</h6>
 							</div>
 							<!-- right-area -->
 						</div>
@@ -104,7 +104,7 @@
 							<li>
 								<b class="font-yellow">PHONE</b> : +880 1915-770274</li>
 							<li>
-								<b class="font-yellow">Graduated From</b> : University of Rajshahi,Bangladesh</li>
+								<b class="font-yellow">Graduated From</b> : University of Rajshahi, Bangladesh</li>
 						</ul>
 						<ul class="social-icons">
 							<li>
@@ -163,11 +163,11 @@
 						Testing, Industrial design and I feel a true devotion for coding.
 					</p>
 					<p class="margin-b-50 about-text">
-							From my university life, I solve more than 400+ real-world problems
-							in several online judges like <a href="http://uhunt.onlinejudge.org/id/570234"> <b>UVA</b> </a>  and also attend many prestigious 
-							national programming contests. Along with these, I develop several
-							hobby-project in many platforms like web, desktop. In last 1.5 year,
-							I totally focus on web app development and develop several projects using some
+							In my university life, I solved more than 400+ real-world problems
+							in several online judges like <a href="http://uhunt.onlinejudge.org/id/570234"> <b>UVA</b> </a>  and also attended many prestigious 
+							national programming contests. Along with these, I developed several
+							hobby-projects in many platforms like web, desktop etc. In last 1.5 years,
+							I totally focused on web app development and developed several projects using some
 							cutting-edge technologies like ASP.Net Core, Angular and put them on <a href="https://github.com/Jaggesher"><b>GitHub</b></a>  
 					</p>
 
@@ -291,13 +291,13 @@
 							<b>TEXLabIT | Rajshahi</b>
 						</h5>
 						<h6 class="font-lite-black margin-t-10">SEPTEMBER 2017 - NOVEMBER 2017</h6>
-						<p class="margin-tb-30 about-text"> In that time interval, I work as a part-time full-stack web application developer. As a team, we mainly develop a govt project. The title of the project is Application For RAB. The main purpose of this project is to managing Bangladesh RAB's confidential data for all unit in Bangladesh.
+						<p class="margin-tb-30 about-text"> In that time interval, I worked as a part-time full-stack web application developer. As a team, we mainly developed a govt. project. The title of the project is Application For RAB. The main purpose of this project is to manage Bangladesh RAB's confidential data for all units in Bangladesh.
 							
 						</p>
 						<ul class="list margin-b-30 exp-point">
 							<li>Application for managing confidential data of RAB in Bangladesh</li>
-							<li>Design and Develop the project as a parts of the team</li>
-							<li>Currently, live on RAB's  backbone serve, and used by all units of RAB in Bangladesh</li>
+							<li>Design and Develop the project as a part of the team</li>
+							<li>Currently, it is live on RAB's backbone serve, and used by all units of RAB in Bangladesh</li>
 							<li class="technology"> <strong class="font-yellow">Key Technologies: </strong> <b>Laravel</b>, <b>MySqli</b>, <b>Bootstrap3</b>, <b>Ajax</b> etc. </li>
 						</ul>
 					</div>
@@ -360,7 +360,7 @@
 	
 							<div class="education margin-b-50">
 								<h4>
-									<b>HSC</b>
+									<b>SSC</b>
 								</h4>
 								<h5 class="font-yellow">
 									<b>BAK High School</b>
@@ -613,11 +613,11 @@
 								<b>Meal Controlling Platform For Rajshai Area.</b>
 							</h5>
 							<p class="margin-tb-30 about-text"> 
-								Most of the people of our country live at least a certain time period in mess and become parts of meal management system. Most of the time whole system is done manually and there is no specific platform for it.
+								Most of the people of our country live at least a certain time period in mess and becomes part of meal management system. Most of the time whole system is done manually and there is no specific platform for it.
 								The aim of this project is to digitalize the process, especially for Rajshahi University area.
 							</p>
 							<ul class="list margin-b-30 exp-point">
-								<li>It works as a platform rather targeting single meal controlling.</li>
+								<li>It works as a platform rather than targeting single meal controlling.</li>
 								<li>Any user can create his own group.</li>
 								<li>People can choose and send request to groups.</li>
 								<li>Better meal on of settings</li>
