--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 								</h5>
 								<h6 class="font-lite-black margin-t-10">GRADUATED IN JUL 2018(4 YEARS)</h6>
 								<p class="margin-tb-30">
-									<p><Strong>CGPA</Strong> Not Published Yet(3.44 after 3rd Year)</p>
+									<p><Strong>CGPA:</Strong> 3.48/4</p>
 								</p>
 							</div>
 							<!-- education -->
