Name Error fixed

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                 <b>HSC</b>
                             </h4>
                             <h5 class="font-yellow">
-                                <b>Khunla Model School & College</b>
+                                <b>Khulna  Model School & College</b>
                             </h5>
                             <h6 class="font-lite-black margin-t-10">Passing Year 2013 </h6>
                             <p class="margin-tb-30">
