Contextual Changes Done

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                             A full-control desktop media player influenced by youtube layout. The main aim of this project was to build a youtube style media player which layout and content are truly decorated as youtube.
                         </p>
                         <ul class="list margin-b-30 exp-point">
-                            <li>Better Foler Choosing.</li>
+                            <li>Better Folder Choosing.</li>
                             <li>Both Audio & Vieo Support</li>
                             <li>Provide full control over media play.</li>
                             <li>Fully responsive desktop application.</li>
@@ -617,7 +617,7 @@
                             <li>It works as a platform rather than targeting single meal controlling.</li>
                             <li>Any user can create his own group.</li>
                             <li>People can choose and send request to groups.</li>
-                            <li>Better meal on of settings</li>
+                            <li>Better meal on off settings</li>
                             <li class="technology"> <strong class="font-yellow">Technologies: </strong> <b>PHP</b>, <b>JQuery</b>, <b>MySql</b>, <b>Ajax</b>, <b>Bootstrap</b> etc.</li>
                         </ul>
                         <div class="intro">
