--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
                                 <ul class="list margin-b-30 skill-point">
                                     <li><b>SQL Server</b></li>
                                     <li><b>MySql</b></li>
-                                    <li>Ajax</li>
                                     <li><b>SignalR</b></li>
-                                    <li>Bootstrap</li>
+                                    <li>Ajax</li>
+                                    <li><b>GraphQL</b></li>
                                 </ul>
                             </div>
                         </div>
