--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                         <div class="info">
                             <i class="icon ion-ios-telephone-outline"></i>
                             <div class="right-area">
-                                <h5>+880 1915-770274</h5>
+                                <!-- <h5>+880 1915-770274</h5> -->
+                                <h5>+880 1516-129909</h5>
                                 <h6>SAT - FRI,9AM - 10PM</h6>
                             </div>
                             <!-- right-area -->
@@ -102,7 +103,8 @@
                             <li>
                                 <b class="font-yellow">EMAIL</b> : jaggesher14@gmail.com</li>
                             <li>
-                                <b class="font-yellow">PHONE</b> : +880 1915-770274</li>
+                                <!-- <b class="font-yellow">PHONE</b> : +880 1915-770274</li> -->
+                                <b class="font-yellow">PHONE</b> : +880 1516-129909</li>
                             <li>
                                 <b class="font-yellow">Graduated From</b> : University of Rajshahi, Bangladesh</li>
                         </ul>
@@ -118,7 +120,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/jaggeshar.mondal">
+                                <a href="https://www.facebook.com/jaggeshar">
                                     <i class="ion-social-facebook"></i>
                                 </a>
                             </li>
@@ -277,7 +279,53 @@
                 </div>
                 <!-- col-sm-3 -->
 
+
+
+                <!-- Experience -->
                 <div class="col-sm-12 col-md-9">
+
+                    <!-- Opus Technology Ltd -->
+                    <div class="experience margin-b-50">
+                        <h4>
+                            <b>Software Engineer</b>
+                        </h4>
+                        <h5 class="font-yellow">
+                            <b> <a href="https://www.opus-bd.com">Opus Technology Limited</a>  | Dhaka</b>
+                        </h5>
+                        <h6 class="font-lite-black margin-t-10">OCTOBER 2018 - PRESENT</h6>
+                        <p class="margin-tb-30 about-text"> In that time interval, I worked as a part-time full-stack web application developer. As a team, we mainly developed a govt. project. The title of the project is Application For RAB. The main purpose of this project is to manage
+                            Bangladesh RAB's confidential data for all units in Bangladesh.
+
+                        </p>
+                        <ul class="list margin-b-30 exp-point">
+                            <li>Application for managing confidential data of RAB in Bangladesh</li>
+                            <li>Design and Develop the project as a part of the team</li>
+                            <li>Currently, it is live on RAB's backbone serve, and used by all units of RAB in Bangladesh</li>
+                            <li class="technology"> <strong class="font-yellow">Key Technologies: </strong> <b>Laravel</b>, <b>MySqli</b>, <b>Bootstrap3</b>, <b>Ajax</b> etc. </li>
+                        </ul>
+                    </div>
+
+                    <!-- MCC Ltd -->
+                    <div class="experience margin-b-50">
+                        <h4>
+                            <b>Software Engineer</b>
+                        </h4>
+                        <h5 class="font-yellow">
+                            <b> <a href="https://mcc.com.bd/"> Multimedia Content & Communications Limited</a>  | Dhaka</b>
+                        </h5>
+                        <h6 class="font-lite-black margin-t-10">AUGUST 2018 - OCTOBER 2018</h6>
+                        <p class="margin-tb-30 about-text"> In that time interval, I worked as a part-time full-stack web application developer. As a team, we mainly developed a govt. project. The title of the project is Application For RAB. The main purpose of this project is to manage
+                            Bangladesh RAB's confidential data for all units in Bangladesh.
+
+                        </p>
+                        <ul class="list margin-b-30 exp-point">
+                            <li>Application for managing confidential data of RAB in Bangladesh</li>
+                            <li>Design and Develop the project as a part of the team</li>
+                            <li>Currently, it is live on RAB's backbone serve, and used by all units of RAB in Bangladesh</li>
+                            <li class="technology"> <strong class="font-yellow">Key Technologies: </strong> <b>Laravel</b>, <b>MySqli</b>, <b>Bootstrap3</b>, <b>Ajax</b> etc. </li>
+                        </ul>
+                    </div>
+                    <!-- TexLabIT -->
                     <div class="experience margin-b-50">
                         <h4>
                             <b>JUNIOR WEB DEVELOPER</b>
